Fix 1st Tenna encounter page description
It's just the one battle, boss…

--- a/encounters/tennabonusround.html
+++ b/encounters/tennabonusround.html
@@ -2,7 +2,7 @@
 title: Tenna encounter - Bonus Round
 
 description: >
-  <p>Flavor text and dialogue for battles against Tenna.</p>
+  <p>Flavor text and dialogue for the Bonus Round encounters against Tenna.</p>
 
 sources:
   -
