Truncate links early on Shuttah disambig for readability
Don't know if it's just me but I find it less visually busy without the underline wherever possible, so

--- a/encounters/shuttah.html
+++ b/encounters/shuttah.html
@@ -6,8 +6,8 @@ layout: disambiguation
 items:
   -
     url: /encounters/shuttahislandboard
-    name: First Shuttah encounter - Island Board, miniboss
+    name: First Shuttah encounter{END_LINK} - Island Board, miniboss
   -
     url: /encounters/shuttahtvworld
-    name: Subsequent Shuttah encounters - TV World, regular enemy
+    name: Subsequent Shuttah encounters{END_LINK} - TV World, regular enemy
 ---
