SAVE points: Add IDs to Cold Place variants
Needed for Ch3 final act page

--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -606,7 +606,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 
 	<h3 id="coldplace">Cold Place</h3> <!-- 109/room_dw_snow_zone -->
 
-	<h4>Before the Bonus Round</h4>
+	<h4 id="coldplace-prebonus">Before the Bonus Round</h4>
 	<!-- actually it's plot < 280, before mike has abandoned tenna -->
 	<d-box theme="dark">
 		<d-text asterisk>(A draft blows, and you feel the cold night's presence.)</d-text>
@@ -615,7 +615,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>(Still, this never bothered you. In fact...)</d-text>
 	</d-box>
 
-	<h4>After the Bonus Round</h4>
+	<h4 id="coldplace-pretenna">After the Bonus Round</h4>
 	<!-- actually it's plot >= 280, once mike has abandoned tenna -->
 	<d-box theme="dark">
 		<d-text asterisk>(The wind blows fiercely, as if it fears the night itself.)</d-text>
@@ -624,7 +624,7 @@ Room names retrieved from gml_GlobalScript_scr_roomname.gml and mapped from IDs 
 		<d-text asterisk>(The final act draws near.)</d-text>
 	</d-box>
 
-	<h4>After fighting Tenna</h4>
+	<h4 id="coldplace-preknight">After fighting Tenna</h4>
 	<d-box theme="dark">
 		<d-text asterisk>(Your hand lingers in the bright light.)</d-text>
 	</d-box>
