Weapons: Mark Cheer Scarf as unused
Whoopsie I forgor

--- a/misc/weapons.html
+++ b/misc/weapons.html
@@ -744,7 +744,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="cheerscarf">Cheer Scarf</h3> <!-- id 15 -->
-	<p>Appears as "CheerScarf" in-game.</p>
+	<p>Unused. Appears as "CheerScarf" in-game.</p>
 
 	<h4 id="cheerscarf-description">Description</h4>
 	<d-box theme="objmenu">
