Misc index: Use em dashes as splitters

--- a/misc/index.html
+++ b/misc/index.html
@@ -14,10 +14,10 @@ items:
     sublist:
       -
         url: weapons
-        name: Weapons{END_LINK} - Attack-focused equipment for the party
+        name: Weapons{END_LINK} — Attack-focused equipment for the party
       -
         url: armor
-        name: Armor{END_LINK} - Defense-focused equipment for the party
+        name: Armor{END_LINK} — Defense-focused equipment for the party
       -
         url: darkitems
         name: Dark World items{END_LINK}, including key items
@@ -26,18 +26,18 @@ items:
         name: Light World items
       -
         url: cellphone
-        name: Cell Phone{END_LINK} - Dialogue for making calls
+        name: Cell Phone{END_LINK} — Dialogue for making calls
   -
     id: events
     name: Events
     sublist:
       -
         url: encounters
-        name: Encounters{END_LINK} - Flavor text, dialogue, ACTs, and responses
+        name: Encounters{END_LINK} — Flavor text, dialogue, ACTs, and responses
         override_base_url: true
       # -
       #   url: gameover
-      #   name: Game Over messages{END_LINK} - standard and unique dialogue upon dying
+      #   name: Game Over messages{END_LINK} — standard and unique dialogue upon dying
   -
     id: menus
     name: Menus
@@ -47,20 +47,20 @@ items:
         sublist:
           # -
           #   url: powermenu
-          #   name: POWER menu{END_LINK} - Character titles and stats
+          #   name: POWER menu{END_LINK} — Character titles and stats
           -
             url: spells
-            name: Spells{END_LINK} - Magic and other abilities
+            name: Spells{END_LINK} — Magic and other abilities
           # TODO: Other menus…?
       -
         name: Enemy- and location-based
         sublist:
           -
             url: recruits
-            name: Recruits{END_LINK} - Darkner profiles
+            name: Recruits{END_LINK} — Darkner profiles
           -
             url: savepoints
-            name: Save points{END_LINK} - Narration accompanying save points
+            name: Save points{END_LINK} — Narration accompanying save points
       -
         url: generic
         name: Generic interactions{END_LINK} shared across chapters
@@ -88,8 +88,8 @@ items:
     sublist:
       -
         url: prophecy
-        name: The Legend of Delta Rune{END_LINK} - original text of the Prophecy
+        name: The Legend of Delta Rune{END_LINK} — original text of the Prophecy
       -
         url: unused
-        name: UNUSED{END_LINK} - Text found in the game files
+        name: UNUSED{END_LINK} — Text found in the game files
 ---
