Document all Tenna's quizzes
And update Susie/Ralsei's quiz behavior on the Bonus Round page

--- a/misc/index.html
+++ b/misc/index.html
@@ -90,6 +90,9 @@ items:
         url: prophecy
         name: The Legend of Delta Rune{END_LINK} — original text of the Prophecy
       -
+        url: quiz
+        name: TV Time quizzes{END_LINK} — Tenna's questions from Chapter 3
+      -
         url: unused
         name: UNUSED{END_LINK} — Text found in the game files
 ---
