POWER menu: Use wider HRs to split chapters
Need the narrower hr2/hr3 for differences within a single chapter

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -176,7 +176,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Inspects all beds<span class="break"></span> inexplicably.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="kristitle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
@@ -212,7 +212,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Commands.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="kristitle3">Chapter 3</h4>
 
@@ -257,7 +257,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>LV3 Enjoying<span class="break"></span> the youthful<span class="break"></span> days.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="kristitle4">Chapter 4</h4>
 
@@ -287,21 +287,21 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 	<p>???</p>
 	<p>Guts: 1</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="krisstat2">Chapter 2</h4>
 	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>???</p>
 	<p>Guts: 2</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="krisstat3">Chapter 3</h4>
 	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>If made any kills on sword route, *: Sword route kill count, clamped to 0 and 9999; otherwise ???</p>
 	<p>Guts: 2</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="krisstat4">Chapter 4</h4>
 	<p>???</p>
@@ -327,7 +327,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Does damage using<span class="break"></span> dark energy.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susietitle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
@@ -350,7 +350,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Supports those<span class="break"></span> that find moss.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susietitle3">Chapter 3</h4>
 
@@ -366,7 +366,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Participates in<span class="break"></span> occult ACTs.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susietitle4">Chapter 4</h4>
 
@@ -390,21 +390,21 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 	<p>Crudeness: 100 if not picked $!$? Squad as team name; 101 if you did</p>
 	<p>Guts: 2</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susiestat2">Chapter 2</h4>
 	<p>Rudeness: 89</p>
 	<p>Purple: Yes</p>
 	<p>Guts: 2</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susiestat3">Chapter 3</h4>
 	<p>Rudeness: 100</p>
 	<p>Plucked: # of times grass plucked, clamped to 0 and 99; if 0, instead shows ???</p>
 	<p>Guts: 3</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="susiestat4">Chapter 4</h4>
 	<p>Rudeness: 100</p>
@@ -436,7 +436,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Weak, but has nice<span class="break"></span> healing powers.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseititle2">Chapter 2</h4>
 	<p>The LV value is 2 at the start of the chapter and changes to 3 after the Cyber World's Dark Fountain is sealed. It is represented by a "#" in this section.</p>
@@ -471,7 +471,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Doesn't even<span class="break"></span> have a photo.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseititle3">Chapter 3</h4>
 
@@ -505,7 +505,7 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 		<d-text>Dark-World being.<span class="break"></span> Has friends.</d-text>
 	</d-box>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseititle4">Chapter 4</h4>
 
@@ -529,21 +529,21 @@ sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 	<p>Fluffiness: 1 (2 if equipped Dainty Scarf)</p>
 	<p>Guts: 0</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseistat2">Chapter 2</h4>
 	<p>Sweetness: 97</p>
 	<p>Fluffiness: 2</p>
 	<p>Guts: 0</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseistat3">Chapter 3</h4>
 	<p>Carried: # of times Ralsei got picked up, clamped to 0 and 99; if 0, instead shows ???</p>
 	<p>Fluffiness: 1</p>
 	<p>Guts: 1</p>
 
-	<hr class="hr2">
+	<hr class="hrhalf">
 
 	<h4 id="ralseistat4">Chapter 4</h4>
 	<p>???</p>
