POWER menu: Add spell sections for each chara

--- a/misc/index.html
+++ b/misc/index.html
@@ -47,7 +47,7 @@ items:
         sublist:
           # -
           #   url: powermenu
-          #   name: POWER menu{END_LINK} — Character titles and stats
+          #   name: POWER menu{END_LINK} — Character titles, stats, and spell lists
           -
             url: spells
             name: Spells{END_LINK} — Magic and other abilities
