Misc. index: Make POWER menu link visible
Whoops, forgot to add that when undrafting the page in question

--- a/misc/index.html
+++ b/misc/index.html
@@ -45,9 +45,9 @@ items:
       -
         name: Party-specific
         sublist:
-          # -
-          #   url: powermenu
-          #   name: POWER menu{END_LINK} — Character titles, stats, and spell lists
+          -
+            url: powermenu
+            name: POWER menu{END_LINK} — Character titles, stats, and spell lists
           -
             url: spells
             name: Spells{END_LINK} — Magic and other abilities
