Green Room: Fix sources (duplicates, wrong notes)

--- a/locations/tvworld/greenroom/index.html
+++ b/locations/tvworld/greenroom/index.html
@@ -35,11 +35,11 @@ sources:
   -
     name: gml_Object_obj_room_green_room_Step_0
     chapters: [3]
-    note: petrified Ramb/S-Rank door first interactions, Zapper second interaction
+    note: petrified Ramb/S-Rank door first interactions, Zapper after Round 2
   -
-    name: gml_Object_obj_npc_room_animated_Other_10
+    name: gml_Object_obj_npc_room_Other_10
     chapters: [3]
-    note: Zapper after Round 2
+    note: Zapper after Round 1
   -
     name: gml_Object_obj_npc_room_animated_Other_10
     chapters: [3]
@@ -901,7 +901,7 @@ toc:
 		<d-box theme="dark">
 			<d-text asterisk>(You played his chest like the bongos.)</d-text>
 		</d-box>
-		<p class="note">The thumping of bongos sounds. Zapper reels, offended.</p>
+		<p class="note">The thumping of bongos sounds. Zapper reels back.</p>
 		<d-box theme="dark">
 			<d-speaker>Zapper</d-speaker>
 			<d-text asterisk>HEY, HANDS OFF THE MOICHANDISE!!</d-text>
@@ -910,7 +910,7 @@ toc:
 			<d-speaker>Zapper</d-speaker>
 			<d-text asterisk>A---choo!!!</d-text>
 		</d-box>
-		<p class="note">A blushing Zapper's sneeze is heard. The screen turns off, then fades back in to reveal the party in the <a href="{{ '/locations/tvworld/greenroom/redcarpethall' | relative_url }}">red carpet hall</a>, just outside the doors to the main area of the Green Room.</p>
+		<p class="note">The blushing Zapper sneezes. The screen turns off, then fades back in to reveal the party in the <a href="{{ '/locations/tvworld/greenroom/redcarpethall' | relative_url }}">red carpet hall</a>, just outside the doors to the main area of the Green Room.</p>
 
 		<hr class="hr2">
 
