Document Ch3 after Round 2
Also run some wording cleanup/clarification and correct mistakenly-transcribed conditions on related pages

--- a/locations/tvworld/greenroom/index.html
+++ b/locations/tvworld/greenroom/index.html
@@ -734,7 +734,7 @@ toc:
 		</d-box>
 		<p class="note">Ramb raises an eyebrow.</p>
 		<hr class="hr2">
-		<h5>If the <a href="{{ '/chapters/chapter3/islandboardsword' | relative_url }}">Sword Route's second stage</a> has been successfully completed</h5>
+		<h5>If the <a href="{{ '/chapters/chapter3/islandboardsword' | relative_url }}">Sword Route's second stage</a> hasn't been successfully completed</h5>
 		<d-box theme="dark">
 			<d-speaker>Ramb</d-speaker>
 			<d-text asterisk>Some action... Some mystery... Maybe some more... freedom?</d-text>
