--- a/locations/tvworld/greenroom/interstitial.html
+++ b/locations/tvworld/greenroom/interstitial.html
@@ -155,7 +155,7 @@ toc:
 			<d-sprite speaker="Susie" emotion="D"></d-sprite>
 			<d-text asterisk>Yeah...</d-text>
 		</d-box>
-		<p class="note">The party enters the Legend of Tenna set to <a href="{{ '/chapters/chapter3/afterround2#tennagroup' | relative_url }}">talk to Tenna</a>.</p>
+		<p class="note">The party enters the Legend of Tenna set to <a href="{{ '/chapters/chapter3/afterround2#tenna-group' | relative_url }}">talk to Tenna</a>.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<d-box theme="dark">
@@ -178,7 +178,7 @@ toc:
 			<d-sprite speaker="Susie" emotion="D"></d-sprite>
 			<d-text asterisk>Whatever you wanna do, I guess...</d-text>
 		</d-box>
-		<p class="note">Kris alone enters the Legend of Tenna set to <a href="{{ '/chapters/chapter3/afterround2#tennakris' | relative_url }}">talk to Tenna</a>, while the other two stay behind.</p>
+		<p class="note">Kris alone enters the Legend of Tenna set to <a href="{{ '/chapters/chapter3/afterround2#tenna-kris' | relative_url }}">talk to Tenna</a>, while the other two stay behind.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<d-box theme="dark">
